sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:13: error: ')' expected but '}' found.
    }
    ^AlgBubbleSort1:16: error: Unmatched closing brace '}' ignored here
          } 
          ^